# shared-detachable-ptr

./: .gitignore  CMakeLists.txt  LICENSE.txt
cmake/: SharedDetachablePtrConfig.cmake
shared_detachable_ptr/: shared_detachable_ptr.hpp
tests/: CMakeLists.txt  example.cpp  shared_detachable_ptr_tests.cpp
